# vpnsci

./: FAQ.md  README.md  pyproject.toml
instsci/: carsi.py  cli.py  publisher_batch.py  session_broker.py
runs/pv_microhabitat_pdf_download_20260608/: consolidate_results.py  decode_b64chunks_pdf.py  download_manual_pdf.py  download_open_access_pdfs.py
tests/: test_acs_batch.py  test_auth_cookie_store.py  test_public_language.py  test_session_broker.py
vpnsci/: auth.py  carsi.py  fetcher.py
