[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpnsci"
version = "0.1.0"
description = "Academic paper fetcher with multi-university WebVPN support"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cloakbrowser>=0.1.0",
    "pymupdf>=1.23.0",
    "mcp[cli]>=1.0.0",
    "pycryptodome>=3.15.0",
]

[project.scripts]
vpnsci = "vpnsci.cli:app"
vpnsci-mcp = "vpnsci.mcp_server:main"

[tool.setuptools.packages.find]
include = ["vpnsci*"]

[tool.setuptools.package-data]
vpnsci = ["data/*.json"]
